# rust-war-bot

./: .travis.yml  Cargo.toml  LICENSE.isc  README.md  build.rs
src/: lib.rs  main.rs  map.rs  parser.rs  warlib.rs
src/parser/: mod.rs
tests/: parser.rs  runner.rs
tests/fodder/: better_economy.txt  bug_game.txt  move_troops_toward_borders.txt  move_troops_toward_borders_2.txt  move_troops_toward_borders_3.txt  move_troops_toward_borders_4.txt
warlib/: Cargo.toml
warlib/src/: lib.rs  map.rs
warlib/src/parser/: errors.rs
warlib/tests/: parser.rs
